Extraction des mots-clés

--- a/tps/tp2/s1_keywords.ipynb
+++ b/tps/tp2/s1_keywords.ipynb
@@ -208,74 +208,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extraction des mots-clés"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('EXEMPLAIRES distribués gratuitement', np.float64(0.0017848580261551092)),\n",
-       " ('lomération bruxelloise et.en', np.float64(0.005155299816540558)),\n",
-       " ('EXEMPLAIRES distribués', np.float64(0.01032598116126104)),\n",
-       " ('bruxelloise et.en province', np.float64(0.0217728194968606)),\n",
-       " ('assassins politiques', np.float64(0.025372781929452606)),\n",
-       " ('distribués gratuitement', np.float64(0.02901112747485758)),\n",
-       " ('lomération bruxelloise', np.float64(0.02901112747485758)),\n",
-       " ('bruxelloise et.en', np.float64(0.029422999711739103)),\n",
-       " ('QUOTIDIEN GRATUIT Température', np.float64(0.030648777502273662)),\n",
-       " ('qu’il', np.float64(0.03653509748641892)),\n",
-       " ('ASSASSINS', np.float64(0.04361721127037355)),\n",
-       " ('Température Baromètre Humidité', np.float64(0.04454901112965941)),\n",
-       " ('midi Température Baromètre', np.float64(0.045927628989632464)),\n",
-       " ('ræge quotidien', np.float64(0.04655000901040904)),\n",
-       " ('commis', np.float64(0.048058141007095885)),\n",
-       " ('fut', np.float64(0.04882392397365301)),\n",
-       " ('chemin de fer', np.float64(0.050194801488827295)),\n",
-       " ('Louvel', np.float64(0.053759999074197734)),\n",
-       " ('d’une', np.float64(0.05450795849251973)),\n",
-       " ('uno', np.float64(0.05452583448200533)),\n",
-       " ('chemin', np.float64(0.05671202509167882)),\n",
-       " ('fer', np.float64(0.058028910575572766)),\n",
-       " ('société', np.float64(0.058078927524250014)),\n",
-       " ('heures', np.float64(0.06036055270043405)),\n",
-       " ('EXEMPLAIRES', np.float64(0.06045375295405591)),\n",
-       " ('BRUXELLES', np.float64(0.0631757910395919)),\n",
-       " ('travail', np.float64(0.06677791183530812)),\n",
-       " ('politiques', np.float64(0.07041544451832259)),\n",
-       " ('midi', np.float64(0.07178224097813798)),\n",
-       " ('Décembre', np.float64(0.07190750597999457)),\n",
-       " ('jour', np.float64(0.07770046095862936)),\n",
-       " ('ligne', np.float64(0.07895680838156742)),\n",
-       " ('grand', np.float64(0.08524689838955626)),\n",
-       " ('point', np.float64(0.0854454893320521)),\n",
-       " ('d’un', np.float64(0.08590493659764754)),\n",
-       " ('SIÈCLE', np.float64(0.08642054582643506)),\n",
-       " ('GRATUIT Température maximum', np.float64(0.08644026197037143)),\n",
-       " ('ans', np.float64(0.08677156289016351)),\n",
-       " ('commis au chemin', np.float64(0.08702378888054658)),\n",
-       " ('Jeudi', np.float64(0.08748169873313137)),\n",
-       " ('Morey et Pépin', np.float64(0.08788098813597583)),\n",
-       " ('capitaine', np.float64(0.08811629535825924)),\n",
-       " ('annonces', np.float64(0.0917124986670345)),\n",
-       " ('timbre', np.float64(0.09188506963089502)),\n",
-       " ('homme', np.float64(0.09422634093974369)),\n",
-       " ('QUOTIDIEN GRATUIT', np.float64(0.09848701432311693)),\n",
-       " ('GRATUIT Température', np.float64(0.10056496590851494)),\n",
-       " ('facteur rural', np.float64(0.10065021437485533)),\n",
-       " ('mort', np.float64(0.10162870130788097)),\n",
-       " ('Température Baromètre', np.float64(0.1059845847757555))]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tous les jours: 1.946609628037995e-06\n",
+      "dans les: 2.153653319257531e-06\n",
+      "des ventes par: 2.1632662554490712e-06\n",
+      "les: 2.3597538952453367e-06\n",
+      "dans toutes les: 2.6166408551066797e-06\n",
+      "RUE DES: 2.7370653677351656e-06\n",
+      "pour les: 3.330556444395215e-06\n",
+      "par les: 3.8143870478619365e-06\n",
+      "dans les rues: 4.076686023208183e-06\n",
+      "tous les: 4.492693089990194e-06\n",
+      "dans tous les: 4.6270033628486246e-06\n",
+      "des: 4.933158527065683e-06\n",
+      "sur les: 5.670979492165108e-06\n",
+      "dans une maison: 6.441944202020223e-06\n",
+      "salle des ventes: 7.511151158170137e-06\n",
+      "rue des Foulons: 7.787735634303522e-06\n",
+      "rue des Palais: 7.867894435169351e-06\n",
+      "les rues les: 7.93352103620355e-06\n",
+      "rue: 8.87199394285604e-06\n",
+      "dans une: 1.04440053172405e-05\n"
+     ]
     }
    ],
    "source": [
-    "# Extraire les mots clés de ce texte\n",
+    "# Lire le texte du fichier\n",
+    "input_filename = os.path.join(data_path, \"all-text_1906.txt\")\n",
+    "\n",
+    "# Lire le contenu du fichier\n",
+    "with open(input_filename, 'r', encoding='utf-8') as f:\n",
+    "    text = f.read()\n",
+    "\n",
+    "# Initialiser Yake et extraire les mots-clés\n",
+    "kw_extractor = yake.KeywordExtractor()\n",
     "keywords = kw_extractor.extract_keywords(text)\n",
-    "keywords"
+    "\n",
+    "# Afficher les mots-clés extraits\n",
+    "for keyword, score in keywords:\n",
+    "    print(f\"{keyword}: {score}\")\n"
    ]
   },
   {
