--- a/tps/tp2/code_adapte_m3s1.ipynb
+++ b/tps/tp2/code_adapte_m3s1.ipynb
@@ -262,6 +262,83 @@
     "for keyword, score in keywords:\n",
     "    print(f\"{keyword}: {score}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vérifier le nombre de mots-clés extraits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre de mots-clés extraits : 20\n",
+      "tous les jours: 1.946609628037995e-06\n",
+      "dans les: 2.153653319257531e-06\n",
+      "des ventes par: 2.1632662554490712e-06\n",
+      "les: 2.3597538952453367e-06\n",
+      "dans toutes les: 2.6166408551066797e-06\n",
+      "RUE DES: 2.7370653677351656e-06\n",
+      "pour les: 3.330556444395215e-06\n",
+      "par les: 3.8143870478619365e-06\n",
+      "dans les rues: 4.076686023208183e-06\n",
+      "tous les: 4.492693089990194e-06\n",
+      "dans tous les: 4.6270033628486246e-06\n",
+      "des: 4.933158527065683e-06\n",
+      "sur les: 5.670979492165108e-06\n",
+      "dans une maison: 6.441944202020223e-06\n",
+      "salle des ventes: 7.511151158170137e-06\n",
+      "rue des Foulons: 7.787735634303522e-06\n",
+      "rue des Palais: 7.867894435169351e-06\n",
+      "les rues les: 7.93352103620355e-06\n",
+      "rue: 8.87199394285604e-06\n",
+      "dans une: 1.04440053172405e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Vérifier le nombre de mots-clés extraits\n",
+    "print(f\"Nombre de mots-clés extraits : {len(keywords)}\")\n",
+    "\n",
+    "# Afficher les mots-clés extraits\n",
+    "for keyword, score in keywords:\n",
+    "    print(f\"{keyword}: {score}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vérifier la qualité du texte extrait"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lire le texte du fichier\n",
+    "input_filename = os.path.join(data_path, \"all-text_1906.txt\")\n",
+    "\n",
+    "with open(input_filename, 'r', encoding='utf-8') as f:\n",
+    "    text = f.read()\n",
+    "\n",
+    "# Vérifier le nombre de caractères dans le texte\n",
+    "text_length = len(text)\n",
+    "print(f\"Nombre de caractères dans le fichier : {text_length}\")\n",
+    "\n",
+    "# Afficher les 500 premiers caractères du texte pour analyser la structure\n",
+    "print(\"Premiers 500 caractères du fichier :\")\n",
+    "print(text[:500])\n"
+   ]
   }
  ],
  "metadata": {
