choix annee et adaptation chemin

--- a/tps/tp2/code_adapte_m3s2.ipynb
+++ b/tps/tp2/code_adapte_m3s2.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,24 +74,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100"
+       "101"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Lister les fichiers de cette année\n",
-    "data_path = '../data'\n",
-    "txt_path = '../data/txt'\n",
+    "data_path = '../../data'\n",
+    "txt_path = '../../data/txt'\n",
     "txts = [f for f in os.listdir(txt_path) if os.path.isfile(os.path.join(txt_path, f)) and str(year) in f]\n",
     "len(txts)"
    ]
