--- a/tps/tp2/code_adapte_m3s2.ipynb
+++ b/tps/tp2/code_adapte_m3s2.ipynb
@@ -155,21 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] The system cannot find the path specified: '../data/tmp'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\tdeganck\\Doc en local\\Corpus\\tac\\tps\\tp2\\code_adapte_m3s2.ipynb Cell 11\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m temp_path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m../data/tmp\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X13sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(temp_path):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     os\u001b[39m.\u001b[39;49mmkdir(temp_path)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(temp_path, \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00myear\u001b[39m}\u001b[39;00m\u001b[39m.txt\u001b[39m\u001b[39m'\u001b[39m), \u001b[39m'\u001b[39m\u001b[39mw\u001b[39m\u001b[39m'\u001b[39m, encoding\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     f\u001b[39m.\u001b[39mwrite(\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(content_list))\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: '../data/tmp'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ecrire tout le contenu dans un fichier temporaire\n",
     "temp_path = '../../data/tmp'\n",
@@ -181,16 +169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"KBDD envir. Bourse. 1 er janv. sent homme en peau brun, fourré, main gauche. Rapporter, 18, r. des Commercante, bonne réeomp> 27821 PERDE jeudi ' 28 entre 11 h. et midi, Bourse - Nord, mont.-brai dame or. Souvenir fam.* Bapp. c. b. récomp. & Mme Moucheur, 67, r. Pacification, apr. I9h. 27882 12 34 dée. apr.-midl a paquet confié à chanff. a été enlevé de sa voit, arrêtée r. du Commerce. La per», euscept. restlt. paquet peut s’adr.chauf- feur respons.: 50, aven. Princesse Elisateth, 50, Schaerbeek\""
+       "'Veadredi 5 JaaYÎer 1906,3! Edition ABONNEMENT pour toute la Belgique : S mois, fr.2.25; 6 mois, tr. 4.25; 4 an, 8 te. --issai*- Le SOER est distribué dans toute l’agglomération bruxelloise (rez-do* chaussée) contre 30 centimes par moi*, montant des Irais d’envoL Abonuornect d\\'étage : 60 cent, par mois* Hollande et Grand-Duché 4 6 fr. par an. - Pays do l\\'Union postale 24 Ir. par a \"- On peut s aoùnner à tous les bureetust d§ jjoste étaux facteurs en tournis. . . TIRAGE: 150.000 EXEMPlj No 5 parai'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -257,10 +245,10 @@
     {
      "data": {
       "text/plain": [
-       "'Output has been written in ../data/tmp/1945_clean.txt!'"
+       "'Output has been written in ../../data/tmp/1906_clean.txt!'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,16 +259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'KBDD ENVIR BOURSE JANV SENT HOMME PEAU BRUN FOURRÉ MAIN GAUCHE RAPPORTER COMMERCANTE BONNE RÉEOMP PERDE JEUDI MIDI BOURSE NORD MONT BRAI DAME SOUVENIR FAM BAPP RÉCOMP MME MOUCHEUR PACIFICATION APR DÉE APR MIDL PAQUET CONFIÉ CHANFF ENLEVÉ VOIT ARRÊTÉE COMMERCE PER EUSCEPT RESTLT PAQUET ADR CHAUF FEUR RESPONS AVEN PRINCESSE ELISATETH SCHAERBEEK DISCRET BONNE RÉCOMP PERDU TROUSSEAU CLEFS FŒSÉ LOUPS ARR TRAM RÉCOMP COENE CHAUSSÉE HAECHT SCH PERDU DÉE PORTE MONNAIE HOMI CUIR BRUN CONT MÉDAILLES GROS '"
+       "'VEADREDI JAAYÎER EDITION ABONNEMENT TOUTE BELGIQUE MOIS MOIS ISSAI SOER DISTRIBUÉ TOUTE AGGLOMÉRATION BRUXELLOISE REZ CHAUSSÉE CENTIMES MONTANT IRAIS ENVOL ABONUORNECT ÉTAGE CENT MOIS HOLLANDE GRAND DUCHÉ PAYS UNION POSTALE AOÙNNER BUREETUST JJOSTE ÉTAUX FACTEURS TOURNIS TIRAGE EXEMPLJ PARAISSENT PAGES BUREAUX PLAGE LOUVAIN REDACTION TÉLÉPHONES ADMINISTRATION TÉLÉPHONE ÉDITIONSPAR JOUR ÀSTLETB INSERTIONS PETITES ANNONCES LIGNES PETITE LIGNE FAITS CORPS LIGUE FAITS DIVERS RÉPARATIONS JUDICIAIRES '"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
