WC6 : mots-vides supp

--- a/tps/tp2/code_adapte_m3s2.ipynb
+++ b/tps/tp2/code_adapte_m3s2.ipynb
@@ -55,7 +55,9 @@
     "       \"tél\", \"rue\", \"francs\", \"etc\", \"app\", \"quand\", \"sér\", \"chez\", \"jours\", \"chaussée\", \"toute\", \n",
     "       \"heures\", \"avant\", \"près\", \"tant\", \"avenue\", \"ceux\", \"celui\", \"quelque\", \"quelques\", \"jamais\", \n",
     "       \"vers\", \"rien\", \"année\", \"puis\", \"devant\", \"très\", \"vient\", \"très\", \"déjà\", \"contenant\", \"mois\", \n",
-    "       \"grand\", \"heure\", \"bon\", \"cuis\", \"belle\", \"petite\", \"jour\"]\n",
+    "       \"grand\", \"heure\", \"bon\", \"cuis\", \"belle\", \"petite\", \"jour\"\n",
+    "       \"hier\", \"pens\", \"bons\", \"cent\", \"fort\", \"sach\", \"appr\", \"alors\", \"cent\", \"plusieurs\", \"seul\", \"part\",\n",
+    "       \"gros\", \"pers\", \"aujourd\", \"toujours\"]\n",
     "sw = set(sw)\n"
    ]
   },
