Adaptation fichier à traiter (1906)

--- a/tps/tp2/code_adapte_m3s3.ipynb
+++ b/tps/tp2/code_adapte_m3s3.ipynb
@@ -25,7 +25,55 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting fr-core-news-md==3.8.0\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.8.0/fr_core_news_md-3.8.0-py3-none-any.whl (45.8 MB)\n",
+      "     ---------------------------------------- 0.0/45.8 MB ? eta -:--:--\n",
+      "     - -------------------------------------- 1.3/45.8 MB 7.5 MB/s eta 0:00:06\n",
+      "     -- ------------------------------------- 3.4/45.8 MB 9.6 MB/s eta 0:00:05\n",
+      "     ---- ----------------------------------- 5.5/45.8 MB 9.3 MB/s eta 0:00:05\n",
+      "     ------ --------------------------------- 7.3/45.8 MB 9.4 MB/s eta 0:00:05\n",
+      "     -------- ------------------------------- 9.2/45.8 MB 9.4 MB/s eta 0:00:04\n",
+      "     --------- ------------------------------ 11.3/45.8 MB 9.4 MB/s eta 0:00:04\n",
+      "     ----------- ---------------------------- 13.1/45.8 MB 9.2 MB/s eta 0:00:04\n",
+      "     ------------- -------------------------- 15.5/45.8 MB 9.4 MB/s eta 0:00:04\n",
+      "     --------------- ------------------------ 17.8/45.8 MB 9.6 MB/s eta 0:00:03\n",
+      "     ----------------- ---------------------- 19.9/45.8 MB 9.7 MB/s eta 0:00:03\n",
+      "     ------------------- -------------------- 22.0/45.8 MB 9.7 MB/s eta 0:00:03\n",
+      "     --------------------- ------------------ 24.1/45.8 MB 9.7 MB/s eta 0:00:03\n",
+      "     ----------------------- ---------------- 26.5/45.8 MB 9.8 MB/s eta 0:00:02\n",
+      "     ------------------------ --------------- 28.3/45.8 MB 9.8 MB/s eta 0:00:02\n",
+      "     -------------------------- ------------- 29.9/45.8 MB 9.5 MB/s eta 0:00:02\n",
+      "     --------------------------- ------------ 32.0/45.8 MB 9.5 MB/s eta 0:00:02\n",
+      "     ----------------------------- ---------- 33.8/45.8 MB 9.5 MB/s eta 0:00:02\n",
+      "     ------------------------------- -------- 36.2/45.8 MB 9.6 MB/s eta 0:00:02\n",
+      "     -------------------------------- ------- 37.7/45.8 MB 9.5 MB/s eta 0:00:01\n",
+      "     ---------------------------------- ----- 39.6/45.8 MB 9.5 MB/s eta 0:00:01\n",
+      "     ----------------------------------- ---- 40.6/45.8 MB 9.3 MB/s eta 0:00:01\n",
+      "     ------------------------------------- -- 42.5/45.8 MB 9.3 MB/s eta 0:00:01\n",
+      "     -------------------------------------- - 44.3/45.8 MB 9.2 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  45.6/45.8 MB 9.2 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  45.6/45.8 MB 9.2 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  45.6/45.8 MB 9.2 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 45.8/45.8 MB 8.2 MB/s eta 0:00:00\n",
+      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
+      "You can now load the package via spacy.load('fr_core_news_md')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "import spacy\n",
@@ -35,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,26 +99,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Charger le texte\n",
     "n=1000000\n",
-    "text = open(\"../data/all.txt\", encoding='utf-8').read()[:n]"
+    "text = open(\"all-text_1906.txt\", encoding='utf-8').read()[:n]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 3.77 s\n",
-      "Wall time: 6.01 s\n"
+      "CPU times: total: 32.2 s\n",
+      "Wall time: 49.4 s\n"
      ]
     }
    ],
