Adaptation fichier clean 1906

--- a/tps/tp2/code_adapte_m3s3.ipynb
+++ b/tps/tp2/code_adapte_m3s3.ipynb
@@ -99,26 +99,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Charger le texte\n",
     "n=1000000\n",
-    "text = open(\"all-text_1906.txt\", encoding='utf-8').read()[:n]"
+    "text = open(\"../../data/tmp/1906_clean.txt\", encoding='utf-8').read()[:n]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 32.2 s\n",
-      "Wall time: 49.4 s\n"
+      "CPU times: total: 19.5 s\n",
+      "Wall time: 34.5 s\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,64 +144,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Verhaegen apparait 7 fois dans le corpus\n",
-      "Arcy apparait 4 fois dans le corpus\n",
-      "Bonne apparait 3 fois dans le corpus\n",
-      "M. Gouin apparait 3 fois dans le corpus\n",
-      "Journa apparait 2 fois dans le corpus\n",
-      "Saint- apparait 2 fois dans le corpus\n",
-      "Jambon apparait 2 fois dans le corpus\n",
-      "franco apparait 2 fois dans le corpus\n",
-      "Salle apparait 2 fois dans le corpus\n",
-      "Saint-Trond apparait 2 fois dans le corpus\n",
-      "Louée apparait 2 fois dans le corpus\n",
-      "cath apparait 2 fois dans le corpus\n",
-      "Bermont apparait 2 fois dans le corpus\n",
-      "M. Humann apparait 2 fois dans le corpus\n",
-      "Villèle apparait 2 fois dans le corpus\n",
-      "Messieurs apparait 2 fois dans le corpus\n",
-      "naedireettoart apparait 1 fois dans le corpus\n",
-      "intoffigaoaa apparait 1 fois dans le corpus\n",
-      "afcrncr apparait 1 fois dans le corpus\n",
-      "i Ponl- apparait 1 fois dans le corpus\n",
-      "Durif apparait 1 fois dans le corpus\n",
-      "Volksrecht apparait 1 fois dans le corpus\n",
-      "Iciuttoa apparait 1 fois dans le corpus\n",
-      "I K. Lanwtreyi apparait 1 fois dans le corpus\n",
-      "r-nta apparait 1 fois dans le corpus\n",
-      "l<- Cou'-t apparait 1 fois dans le corpus\n",
-      "M.t ar.tlll«m apparait 1 fois dans le corpus\n",
-      "Voortui apparait 1 fois dans le corpus\n",
-      "Mmanebe apparait 1 fois dans le corpus\n",
-      "Jehaako apparait 1 fois dans le corpus\n",
-      "Concerts  varlèa  I apparait 1 fois dans le corpus\n",
-      "Lenka apparait 1 fois dans le corpus\n",
-      "Jota dai apparait 1 fois dans le corpus\n",
-      "grandee apparait 1 fois dans le corpus\n",
-      "i jrjnt apparait 1 fois dans le corpus\n",
-      "S. Ralleeterô apparait 1 fois dans le corpus\n",
-      "bone  elevens apparait 1 fois dans le corpus\n",
-      "européea apparait 1 fois dans le corpus\n",
-      "Four apparait 1 fois dans le corpus\n",
-      "Rachel  \n",
-      "Mer apparait 1 fois dans le corpus\n",
-      "Jeanne  Mahieu apparait 1 fois dans le corpus\n",
-      "Mita de St-Saéna apparait 1 fois dans le corpus\n",
-      "Ixeües apparait 1 fois dans le corpus\n",
-      "Gbys apparait 1 fois dans le corpus\n",
-      "Deblon apparait 1 fois dans le corpus\n",
-      "ingénienr apparait 1 fois dans le corpus\n",
-      "Borne apparait 1 fois dans le corpus\n",
-      "Avrttz apparait 1 fois dans le corpus\n",
-      "Mûlibran apparait 1 fois dans le corpus\n",
-      "JosM-ton-Noode apparait 1 fois dans le corpus\n"
+      "DUDIT apparait 5 fois dans le corpus\n",
+      "LOCAT apparait 4 fois dans le corpus\n",
+      "ALLA apparait 3 fois dans le corpus\n",
+      "HECTOR DENIS apparait 3 fois dans le corpus\n",
+      "CIBILS apparait 3 fois dans le corpus\n",
+      "MÉRODE apparait 3 fois dans le corpus\n",
+      "VLEURGAT apparait 3 fois dans le corpus\n",
+      "HERRY apparait 2 fois dans le corpus\n",
+      "BRAVES apparait 2 fois dans le corpus\n",
+      "LOUIS GARDE apparait 2 fois dans le corpus\n",
+      "LOUIS BOIS DORÉ apparait 2 fois dans le corpus\n",
+      "FIAI apparait 2 fois dans le corpus\n",
+      "HEURS apparait 2 fois dans le corpus\n",
+      "BELGIKA apparait 2 fois dans le corpus\n",
+      "MAES IXELLES apparait 2 fois dans le corpus\n",
+      "REMBOURSABLE apparait 2 fois dans le corpus\n",
+      "SÉRIÉ REMBOURSABLE apparait 2 fois dans le corpus\n",
+      "MINÉRALE apparait 2 fois dans le corpus\n",
+      "BAUDOUIN apparait 2 fois dans le corpus\n",
+      "JJOSTE ÉTAUX apparait 1 fois dans le corpus\n",
+      "TOURNIS apparait 1 fois dans le corpus\n",
+      "HONNEURS apparait 1 fois dans le corpus\n",
+      "REGARDAIT COIFFET apparait 1 fois dans le corpus\n",
+      "MÉCHA apparait 1 fois dans le corpus\n",
+      "SOMBRES apparait 1 fois dans le corpus\n",
+      "AÇORES BISE apparait 1 fois dans le corpus\n",
+      "NOËL ALITA apparait 1 fois dans le corpus\n",
+      "LICHTK apparait 1 fois dans le corpus\n",
+      "MÉTELT apparait 1 fois dans le corpus\n",
+      "WILDE apparait 1 fois dans le corpus\n",
+      "SAIIS ALTÉRER apparait 1 fois dans le corpus\n",
+      "RECUEILLIR apparait 1 fois dans le corpus\n",
+      "FILTE apparait 1 fois dans le corpus\n",
+      "NOORE apparait 1 fois dans le corpus\n",
+      "PRÉCIPII TAMMÇNT apparait 1 fois dans le corpus\n",
+      "GRANDIT DEVINT apparait 1 fois dans le corpus\n",
+      "ALESÏURES apparait 1 fois dans le corpus\n",
+      "NTUR apparait 1 fois dans le corpus\n",
+      "JPERS DONNE apparait 1 fois dans le corpus\n",
+      "AISON apparait 1 fois dans le corpus\n",
+      "DLRÉDERODE apparait 1 fois dans le corpus\n",
+      "INSTR MEUNERIE XELLOISE apparait 1 fois dans le corpus\n",
+      "AÉSON apparait 1 fois dans le corpus\n",
+      "CHAMB apparait 1 fois dans le corpus\n",
+      "PPEM PROPR apparait 1 fois dans le corpus\n",
+      "LOUIS QUART apparait 1 fois dans le corpus\n",
+      "MILIRLAIRES apparait 1 fois dans le corpus\n",
+      "VOIL CREIN apparait 1 fois dans le corpus\n",
+      "TEMPORAIRES apparait 1 fois dans le corpus\n",
+      "WEBER apparait 1 fois dans le corpus\n"
      ]
     }
    ],
